--- a/style/box.css
+++ b/style/box.css
@@ -57,7 +57,8 @@
     height: 100%;
     } */
 #box2 {
-    height: 100dvh !important;
+    min-height: 100dvh !important;
+    padding-bottom: 20dvw;
 }
 
 #box3 {
