--- a/style/box.css
+++ b/style/box.css
@@ -175,7 +175,27 @@
 .mt-4 {
     margin-top: 4rem !important;
 }
-
+.myImg{
+  max-width: 4dvw ;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.friendImg{
+  max-width: 4dvw ;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 1px solid white;
+  margin-left: -.64rem;
+  transition: all 0.4s;
+  position: relative;
+}
+.friendImg:hover{
+  margin-right: .5rem;
+  transition: 0.6s;
+  bottom: 4px;
+}
 @media (max-width:960px) {
     .skillImg {
         max-width: 36dvw !important;
