--- a/style/box.css
+++ b/style/box.css
@@ -30,7 +30,9 @@
     background-image: linear-gradient(135deg, #0d6efd, #ffffff);
     width: 100dvw !important;
 }
-
+#box5{
+    min-height: 100dvh !important;
+}
 #btn1 {
     color: white !important;
     background-color: rgba(255, 255, 255, 0.2);
