--- a/style/Style.css
+++ b/style/Style.css
@@ -1,14 +1,26 @@
 body {
-  overflow-x: hidden !important;
+  overflow-x: hidden ;
+  overflow-y: hidden ;
   padding: 0;
   font-family: "Raleway" !important;
   font-style: normal;
   min-height: 300dvh !important;
   max-width: 100dvw !important;
 }
-
+#loadingBox{
+  position: absolute;
+  width: 100dvw ;
+  height: 100dvh ;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  background-color: white;
+}
 .heroDiv {
   /* width: fit-content !important   ; */
+  padding: .2rem;
   overflow: hidden;
 }
 
@@ -98,4 +110,33 @@ body {
   .songBtn {
     padding: 1rem !important;
   }
+}
+.loader {
+  width: 12dvw;
+  aspect-ratio: 1;
+  display:grid;
+  mask: conic-gradient(from 15deg,#0000,#000);
+  animation: l26 1s infinite steps(12);
+}
+.loader,
+.loader:before,
+.loader:after{
+  background:
+    radial-gradient(closest-side at 50% 12.5%,
+     #000 96%,#0000) 50% 0/20% 80% repeat-y,
+    radial-gradient(closest-side at 12.5% 50%,
+     #000 96%,#0000) 0 50%/80% 20% repeat-x;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  grid-area: 1/1;
+  transform: rotate(30deg);
+}
+.loader:after {
+  transform: rotate(60deg);
+}
+
+@keyframes l26 {
+  100% {transform:rotate(1turn)}
 }
